--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
 # C extensions
 *.so
 
@@ -139,6 +144,7 @@ cython_debug/
 
 # Workspace information
 .idea/
+.vscode/
 
 # GitIgnore file itself
 #.gitignore
