--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,7 +42,8 @@ jobs:
       #       - ${{ github.event.head_commit.message }}
       #     draft: false
       #     prerelease: false
-      - name: Create Release
+      - name: Create Release and Upload executable asset
+        id: create_release
         if: github.event_name == 'push' #&& github.ref == 'refs/heads/master'
         run: npx semantic-release
         env:
@@ -52,13 +53,13 @@ jobs:
       #   with:
       #     name: network_scanner
       #     pr
-      - name: Upload Release Asset (Executable)
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./dist/network_scanner
-          asset_name: ${{ github.repository }}
-          asset_content_type: application/vnd.microsoft.portable-executable
+      # - name: Upload Release Asset (Executable)
+      #   id: upload-release-asset 
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+      #     asset_path: ./dist/network_scanner
+      #     asset_name: ${{ github.repository }}
+      #     asset_content_type: application/vnd.microsoft.portable-executable
