--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,6 @@ jobs:
           pip --version
       - name: Checkout Code
         uses: actions/checkout@v2
-      - run: ls -aRl
       - name: Installing dependencies
         run: |
           pip install -r requirements.txt
@@ -28,38 +27,15 @@ jobs:
             flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Packaging the python applications
         run: pyinstaller --onefile src/network_scanner.py
-      - run: ls -aRl
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      #   with:
-      #     tag_name: ${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      #     body: |
-      #       Changes in this Release
-      #       - ${{ github.event.head_commit.message }}
-      #     draft: false
-      #     prerelease: false
-      - name: Create Release and Upload executable asset
-        id: create_release
-        if: github.event_name == 'push' #&& github.ref == 'refs/heads/master'
+      - name: Create Beta Release and Upload executable asset
+        id: create_prerelease
+        if: github.event_name == 'push' && github.ref == 'refs/heads/beta'
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Uploading executable artifact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: network_scanner
-      #     pr
-      # - name: Upload Release Asset (Executable)
-      #   id: upload-release-asset 
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-      #     asset_path: ./dist/network_scanner
-      #     asset_name: ${{ github.repository }}
-      #     asset_content_type: application/vnd.microsoft.portable-executable
+      - name: Create Release and Upload executable asset
+        id: create_release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
